--- a/src/app/user-login/user-login.component.html
+++ b/src/app/user-login/user-login.component.html
@@ -1,3 +1,12 @@
-<div  class="margin-fit pageDiv" >
-   
-</div> 
+<div class="margin-fit pageDiv">
+  <div class="headerDiv">
+    <div class="ml-5">Users</div>
+    <div class="ml-auto mr-5">
+
+      Add user
+    </div>
+  </div>
+
+
+
+</div>
