set col classes

--- a/src/app/user-login/user-login.component.html
+++ b/src/app/user-login/user-login.component.html
@@ -1,12 +1,19 @@
 <div class="margin-fit pageDiv">
-  <div class="headerDiv">
-    <div class="ml-5">Users</div>
-    <div class="ml-auto mr-5">
 
-      Add user
+  <div class="headerDiv divPad">
+    <div>Users</div>
+    <div class="spacer"></div>
+    <div>
+      Add Users
     </div>
   </div>
 
+  <div class="row mr-0 col-12 col-lg-12 col-md-12 col-sm-12">
+    <div class="col-lg-6 col-md-6 col-sm-6">
+      User Name
+    </div>
+    <div class="col-lg-6 col-md-6 col-sm-6">
+      Class
+    </div>
 
-
-</div>
+  </div>
