--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -1,8 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
 /* Responsive Styles */
 
-.margin-fit{
+.header-margin-fit{
 	margin: -8px -8px 0px -8px;
+}
+
+.margin-fit{
+	margin: -8px 0px 0px -8px;
+}
+
+.divPad{
+	margin: 0px 10px 0px 21px;
 }
 
 .spacer {
@@ -284,4 +292,8 @@ svg#clouds {
 	align-items: center;
     display: flex;
     height: 50px;
+}
+
+.mr-0{
+	margin-left: 0px !important;
 }
