--- a/src/app/user-login/user-login.component.html
+++ b/src/app/user-login/user-login.component.html
@@ -1,19 +1,41 @@
+<!-- <ngx-toasta [position]="'top-right'"></ngx-toasta> -->
+
 <div class="margin-fit pageDiv">
 
   <div class="headerDiv divPad">
     <div>Users</div>
     <div class="spacer"></div>
     <div>
-      Add Users
+      <i class="fa fa-plus-circle fa-2x text-success" title="Add User" aria-hidden="true"></i>
     </div>
   </div>
 
-  <div class="row mr-0 col-12 col-lg-12 col-md-12 col-sm-12">
-    <div class="col-lg-6 col-md-6 col-sm-6">
+  <div class="row mr-0 col-12 col-lg-12 col-md-12 col-sm-12" >
+    <div class="col-lg-6 col-md-6 col-sm-6" style="background-color: red;">
       User Name
     </div>
-    <div class="col-lg-6 col-md-6 col-sm-6">
+    <div class="col-lg-6 col-md-6 col-sm-6" style="background-color: green;">
       Class
     </div>
 
   </div>
+</div>
+
+  <!-- <div class="row m-0 d-flex">
+    <h1 class="text-muted d-inline-block m-0 h2 p-1 pl-0 d-flex align-items-center my-auto">Sites</h1>
+    <div class="ml-auto text-center px-4 d-flex align-items-center">
+      <span class="img-btn md exportCsv-btn" (click)="onBtnExport()"></span>
+      <span class="img-btn md add-btn" ></span>
+      [routerLink]="['./new']"
+    </div>
+  </div>
+
+  
+  <div class="row m-0 mt-2 d-flex shadow-sm">
+   <ag-grid-angular id="agGrid" style="width: 100%; height: 75vh;" class="ag-theme-alpine" [rowData]="users" 
+      [columnDefs]="columnDefs" pagination="true" (gridReady)="onGridReady($event)" [animateRows]="false" 
+      [defaultColDef]="defaultColDef" [paginationAutoPageSize]="true" [rowHeight]="40" [autoSizePadding]="true" > 	
+    </ag-grid-angular>
+  </div> -->
+
+  
